--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+
+<!--is page ko fragment banane ke liye th:fragment=layout(content) likha hai. Ab is base page ko koi bhi extend kr skta hai
+and apna content daal skta hai just like method parameter.fragment ka naam layout hai and uske content ka naam content hai.
+is base ko maine profile.html mai extend kra hai.-->
+
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
 <head>
     <meta charset="UTF-8">
