--- a/src/main/resources/templates/footer2.html
+++ b/src/main/resources/templates/footer2.html
@@ -5,6 +5,10 @@
   <title>Title</title>
 </head>
 <body>
+
+<!--esa krne se y footer ek fragment bn gaya footer2 naam ka ab is fragment ko koi bhi use kr skta hai and usme content paas kr skta hai just like
+methos parameter-->
+
 <footer th:fragment="footer2(title)">
   <div class="container" >
     <h1 th:text="${title}"></h1>
